# isaac_ros_image_segmentation

./: .gitattributes  README.md
docs/: tutorial-isaac-sim.md  tutorial-nitros-graph.md
isaac_ros_gxf_extensions/gxf_isaac_ros_segment_anything/: CMakeLists.txt  package.xml
isaac_ros_gxf_extensions/gxf_isaac_ros_segment_anything/gxf/segment_anything/: segment_anything_ext.cpp  segment_anything_msg_compositor.cpp  segment_anything_msg_compositor.hpp  segment_anything_postprocessor.cpp  segment_anything_postprocessor.cu.cpp  segment_anything_postprocessor.cu.hpp  segment_anything_postprocessor.hpp  segment_anything_prompt_processor.cpp  segment_anything_prompt_processor.hpp
isaac_ros_gxf_extensions/gxf_isaac_ros_unet/: CMakeLists.txt  package.xml
isaac_ros_gxf_extensions/gxf_isaac_ros_unet/gxf/image_segmentation/: segmentation_mask_colorizer.cpp  segmentation_mask_colorizer.cu.cpp  segmentation_mask_colorizer.cu.hpp  segmentation_mask_colorizer.hpp  segmentation_postprocessing_utils.hpp  segmentation_postprocessor.cpp  segmentation_postprocessor.cu.cpp  segmentation_postprocessor.cu.hpp  segmentation_postprocessor.hpp  segmentation_postprocessor_ext.cpp
isaac_ros_peoplesemseg_models_install/: CMakeLists.txt  package.xml
isaac_ros_peoplesemseg_models_install/asset_scripts/: install_peoplesemsegnet_shuffleseg.sh  install_peoplesemsegnet_vanilla.sh
isaac_ros_segformer/: CMakeLists.txt  package.xml
isaac_ros_segformer/launch/: isaac_ros_people_sem_segformer_argus.launch.py  isaac_ros_people_sem_segformer_isaac_sim.launch.py  isaac_ros_people_sem_segformer_realsense.launch.py  isaac_ros_people_sem_segformer_tensor_rt.launch.py  isaac_ros_people_sem_segformer_triton.launch.py  isaac_ros_segformer_core.launch.py
isaac_ros_segformer/test/: isaac_ros_segformer_pol_test.py
isaac_ros_segformer/test/dummy_model/: .gitignore  model.dummy.onnx
isaac_ros_segment_anything/: CMakeLists.txt  package.xml
isaac_ros_segment_anything/config/: quickstart_interface_specs.json  segment_anything_data_encoder_node.yaml  segment_anything_decoder_node.yaml  segment_anything_spec_file.yaml
isaac_ros_segment_anything/include/isaac_ros_segment_anything/: segment_anything_binarize_tensor.hpp  segment_anything_data_encoder_node.hpp  segment_anything_decoder_node.hpp  segment_anything_dummy_mask_publisher_node.hpp  segment_anything_point_triggered_node.hpp  segment_anything_tensor_to_image_node.hpp
isaac_ros_segment_anything/launch/: isaac_ros_segment_anything_argus.launch.py  isaac_ros_segment_anything_core.launch.py  isaac_ros_segment_anything_isaac_sim.launch.py  isaac_ros_segment_anything_realsense.launch.py  isaac_ros_segment_anything_triton.launch.py
isaac_ros_segment_anything/scripts/: colored_mask_converter_node.py  torch_to_onnx.py  visualize_mask.py
isaac_ros_segment_anything/src/: segment_anything_binarize_tensor.cu  segment_anything_data_encoder_node.cpp  segment_anything_decoder_node.cpp  segment_anything_dummy_mask_publisher_node.cpp  segment_anything_point_triggered_node.cpp  segment_anything_tensor_to_image_node.cpp
isaac_ros_segment_anything/test/: isaac_ros_segment_anything_onnx_pol.py  isaac_ros_segment_anything_point_prompt_pol.py  isaac_ros_segment_anything_tensor_to_image_test.py  segment_anything_data_encoder_node_test.cpp
isaac_ros_segment_anything/test/model/segment_anything/: config.pbtxt
isaac_ros_segment_anything/test/model/segment_anything/1/: model.onnx
isaac_ros_segment_anything/test/rosbags/segment_anything_sample_data/: metadata.yaml
isaac_ros_segment_anything2/: CMakeLists.txt  package.xml
isaac_ros_segment_anything2/include/isaac_ros_segment_anything2/: segment_anything2_data_encoder_node.hpp  segment_anything2_state_manager.hpp
isaac_ros_segment_anything2/launch/: isaac_ros_segment_anything2_core.launch.py
isaac_ros_segment_anything2/scripts/: add_object.py  sam2_onnx_exporter.py  sam2_wrapper.py
isaac_ros_segment_anything2/src/: segment_anything2_data_encoder_node.cpp  segment_anything2_state_manager.cpp
isaac_ros_segment_anything2/test/: isaac_ros_segment_anything2_pol.py
isaac_ros_segment_anything2/test/model/segment_anything2/: config.pbtxt
isaac_ros_segment_anything2/test/model/segment_anything2/1/: model.onnx
isaac_ros_segment_anything2_interfaces/: CMakeLists.txt  package.xml
isaac_ros_segment_anything2_interfaces/srv/: AddObjects.srv  RemoveObject.srv
isaac_ros_unet/: CMakeLists.txt  package.xml
isaac_ros_unet/config/: unet_decoder_node.yaml
isaac_ros_unet/gxf/image_segmentation/: CMakeLists.txt  segmentation_mask_colorizer.cpp  segmentation_mask_colorizer.cu.cpp  segmentation_mask_colorizer.cu.hpp  segmentation_mask_colorizer.hpp  segmentation_postprocessing_utils.hpp  segmentation_postprocessor.cpp  segmentation_postprocessor.cu.cpp  segmentation_postprocessor.cu.hpp  segmentation_postprocessor.hpp  segmentation_postprocessor_ext.cpp
isaac_ros_unet/include/isaac_ros_unet/: unet_decoder_node.hpp
isaac_ros_unet/launch/: isaac_ros_argus_unet_triton.launch.py  isaac_ros_unet_core.launch.py  isaac_ros_unet_encoder.launch.py  isaac_ros_unet_tensor_rt.launch.py  isaac_ros_unet_tensor_rt_isaac_sim.launch.py  isaac_ros_unet_triton.launch.py  isaac_ros_unet_triton_isaac_sim.launch.py
isaac_ros_unet/src/: unet_decoder_node.cpp
isaac_ros_unet/test/: isaac_ros_unet_pol_test.py  unet_decoder_node_test.cpp
resources/: peoplesemsegnet_shuffleseg_config.pbtxt
resources/rosbags/segment_anything_sample_data/: metadata.yaml  segment_anything_sample_data_0.db3
resources/rosbags/unet_sample_data/: metadata.yaml  unet_sample_data_0.db3
